--- a/index.html
+++ b/index.html
@@ -2,29 +2,132 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - HurricanerRun</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2 {
+      color: #111;
+    }
+    h1 {
+      border-bottom: 2px solid #eee;
+      padding-bottom: 10px;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .meta {
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 24px;
+    }
+  </style>
 </head>
 <body>
+
   <h1>Privacy Policy</h1>
+  <p class="meta">
+    App Name: <strong>HurricanerRun</strong><br>
+    Last updated: <strong>January 14, 2026</strong>
+  </p>
 
-  <p>This application respects and protects the privacy of users.</p>
+  <h2>1. Introduction</h2>
+  <p>
+    HurricanerRun ("we", "our", or "the App") respects and protects the privacy of all users.
+    This Privacy Policy explains how information is collected, used, and shared when you use our application.
+  </p>
 
-  <h2>Information We Collect</h2>
-  <p>We may collect device information, usage data, and network information.</p>
+  <h2>2. Information We Collect</h2>
+  <p>
+    We do not directly collect, store, or require users to provide any personal information.
+    However, the App integrates third-party advertising services, which may automatically collect certain data.
+  </p>
 
-  <h2>How We Use Information</h2>
-  <p>The information collected is used to improve app functionality and user experience.</p>
+  <h2>3. Third-Party Services</h2>
+  <p>
+    The App uses <strong>Google AdMob</strong> to display advertisements.
+    AdMob may collect the following information automatically:
+  </p>
+  <ul>
+    <li>Device information</li>
+    <li>Advertising identifiers (such as IDFA)</li>
+    <li>IP address</li>
+    <li>Approximate location</li>
+    <li>Ad interaction and usage data</li>
+  </ul>
+  <p>
+    This data is collected and processed by Google in accordance with its own Privacy Policy.
+  </p>
+  <p>
+    Google Privacy Policy:
+    <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">
+      https://policies.google.com/privacy
+    </a>
+  </p>
 
-  <h2>Third-party Services</h2>
-  <p>This app may use third-party SDKs such as advertising or analytics services.</p>
+  <h2>4. How Information Is Used</h2>
+  <p>
+    Information collected by third-party services may be used for the following purposes:
+  </p>
+  <ul>
+    <li>Displaying advertisements</li>
+    <li>Improving ad relevance</li>
+    <li>Measuring ad performance</li>
+    <li>Preventing fraud and abuse</li>
+  </ul>
+  <p>
+    We do not use this information to personally identify users.
+  </p>
 
-  <h2>Data Security</h2>
-  <p>We take reasonable measures to protect your data.</p>
+  <h2>5. Data Sharing</h2>
+  <p>
+    We do not sell or directly share user data.
+    Any data sharing is performed solely by third-party services such as Google AdMob,
+    in accordance with their respective privacy policies.
+  </p>
 
-  <h2>Your Rights</h2>
-  <p>You may contact us to request deletion of your data.</p>
+  <h2>6. Children’s Privacy</h2>
+  <p>
+    This App does not knowingly collect personal information from children under the age of 13.
+    If you believe that such information has been collected, please contact us and we will take appropriate action.
+  </p>
 
-  <h2>Contact Us</h2>
-  <p>Email: your@email.com</p>
+  <h2>7. Data Security</h2>
+  <p>
+    We take reasonable measures to protect the App and user information.
+    However, please note that no method of transmission over the Internet or electronic storage is 100% secure.
+  </p>
+
+  <h2>8. Your Rights</h2>
+  <p>
+    You may choose to limit advertising tracking through your device settings.
+    For more information, please refer to your device’s privacy settings.
+  </p>
+
+  <h2>9. Changes to This Privacy Policy</h2>
+  <p>
+    We may update this Privacy Policy from time to time.
+    Any changes will be posted on this page.
+  </p>
+
+  <h2>10. Contact Us</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact us at:
+  </p>
+  <p>
+    📧 <strong>zhangzeyaninzhuhai@gmail.com</strong>
+  </p>
+
 </body>
 </html>
