--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     If you have any questions about this Privacy Policy, please contact us at:
   </p>
   <p>
-    📧 <strong>zhangzeyaninzhuhai@gmail.com</strong>
+    📧 <strong>MosesRoblesrko@outlook.com</strong>
   </p>
 
 </body>
